# Threat-Intel-Agent

./: .gitignore  CHATBOT_SETUP_COMPLETE.md  LICENSE  Non-Agentic Bot.md  QUICK_START.md  README.md  SOC_INFRASTRUCTURE_CONTEXT_GUIDE.md  env.example  pyproject.toml  requirements.txt  run_all.py  setup_env.py  streamlit_app.py  web_ui.py
client/: llm_agent_dynamic.py  mcp_client.py
core/: hybrid_search.py  llm.py  model_manager.py  risk_scorer.py  run_all.py  sbom_processor.py  secrets_manager.py  web_ui.py
data/: QDRANT_SETUP.md  README.md  osv_collector.py  setup_local_qdrant.py
server/: mcp_server.py
tools/: rag_tool.py  web_search.py
utils/: config.py  embeddings.py  hybrid_search.py  llm.py  model_manager.py  reranker.py  secrets_manager.py
